--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "aceternity-ui": "^0.2.2",
+    "framer-motion": "^11.3.21",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
@@ -20,6 +21,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.5.4"
   }
 }
